--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "match-sorter": "^6.3.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "sort-by": "^0.0.2",
     "tailwindcss": "^3.3.5"
